--- a/code/create_feature.ipynb
+++ b/code/create_feature.ipynb
@@ -9,7 +9,7 @@
     "from feature import Feature\n",
     "from util import Util\n",
     "from runner import Runner\n",
-    "from model_lgbm import ModelLGBM\n",
+    "from model_lgb import ModelLGB\n",
     "from dataset import Dataset\n",
     "import pandas as pd"
    ]
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
     "weekday_names = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday']\n",
     "for name in weekday_names:\n",
     "    dataset[name] = (dataset['date'].map(date2WeekDayNumber) == name).astype('float32')\n",
-    "    feature.register_feature(dataset[name], name)\n"
+    "    feature.register_feature(dataset[name], name)"
    ]
   },
   {
@@ -124,7 +124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
